Related stories random display in success stories narratives page and footer changes

--- a/src/index.css
+++ b/src/index.css
@@ -101,12 +101,17 @@
 }
 
 .dt-text {
-  border-bottom: 1px solid #D1D5DB; 
-  width: 600px; 
+  border-bottom: 1px solid #d1d5db;
+  width: 600px;
 }
 .grayscale {
   filter: grayscale(20%);
 }
-.text-shadows{
-  text-shadow: "4px 4px 8px rgba(0, 0, 0, 0.5)"
+.text-shadows {
+  text-shadow: "4px 4px 8px rgba(0, 0, 0, 0.5)";
+}
+.related-stories-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
