--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,53 @@
   height: 200px;
   object-fit: cover;
 }
+.results-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Space between each box */
+  margin: 10rem 0;
+}
+
+.result-box {
+  background-color: #f4f4f4;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+}
+
+.result-content {
+  display: flex;
+  align-items: flex-start;
+}
+
+.image-column {
+  flex: 0.3 1;
+  margin-right: 1rem;
+}
+
+.image-column img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.text-column {
+  flex: 2;
+}
+
+.text-column h2 {
+  margin-top: 0;
+}
+
+.text-column p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 3rem;
+  line-height: 1.5rem;
+  margin: 0.5rem 0 0;
+}
